<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ntua.hci.mysecondandroidapp.ui.main.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="110"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item android:id="@+id/search"
        android:title="@string/app_name"
        android:hint="@string/search_bar"
        android:icon="@mipmap/ic_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
</menu>